Fix alignment in BookChapterChooser component (#2253)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/book-chapter-chooser/book-chapter-chooser.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/book-chapter-chooser/book-chapter-chooser.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: flex;
+  align-items: center;
 }
 
 // Unfortunately there doesn't appear to be a good way to style a mat-select
